
2015-09-24  Edward Hart <edward.dan.hart@gmail.com>

	* scanner.l: added non-standard numeric literals: MF's numeric
	  boolean and ACUCOBOL's B#, O#, X# and H# literals.
	* tree.c: improved error messages and refactored (cb_concat_literals).

2015-09-15  Brian Tiffin <btiffin@gnu.org>

	* cobc.h, moved COB_DASH defines out of ../configure.ac

2015-08-25  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: tightened AT clause definition.
	* typeck.c (valid_screen_pos): improved error message and refactored.

2015-08-23  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: improved error messages of integer and report_integer.

2015-08-21  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: removed PENDING from LOWLIGHT clause.

2015-08-20  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: adding check for ACCEPT/DISPLAY statements taking
	  the cursor position as a single field so that the position is an
	  integer with 6 digits or less than 4 digits.
	* parser.y: improved error messages of integer and report_integer.

2015-08-03  Brian Tiffin <btiffin@gnu.org>

	* cobc.h, cobc.c, pplex.l: allow compiles from stdin
	* cobc.c: add -j after build run
	  added short aliases for -free (-F) and -debug (-a)

2015-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: added TALLY special register (Wish List #34).

2015-07-05  Edward Hart <edward.dan.hart@gmail.com>

	* scanner.l: Improved error detection of invalid floating-poit literals
	  and associated error messages. Also minor refactoring.

2015-06-12  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c: bug #78 - changed location of initialization of
	  local-storage items.
	* pplex.l: bug #102 - added check for contination line without literal
	  or word to continue.

2015-06-09  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: bug #83 - added check for relative LINE/COLUMN clauses in
	  screen section occurs items.

2015-05-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
